# red_chat_robot

./: .dockerignore  .gitignore  Modelfile  README.md  config.yaml  docker-compose.yaml  dockerfile  entrypoint.sh  requirements.txt
red_chat_robot/: pyproject.toml
src/red_chat_robot/: config.py  main.py
