[project]
name = "red-chat-robot"
version = "0.1.0"
description = ""
authors = [
    {name = "Victor Ozhereliev",email = "VictorOzhereliev@yandex.ru"}
]
readme = "README.md"
requires-python = "==3.10.16"
dependencies = [
    "gradio (==5.18.0)",
    "ollama (==0.4.7)"
]

[tool.poetry]
packages = [{include = "red_chat_robot", from = "src"}]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
